--- a/src/app/shift-table/shift-table.component.scss
+++ b/src/app/shift-table/shift-table.component.scss
@@ -27,5 +27,17 @@ table {
   font-weight: bold;
 
 }
+/* CSS for coloring the recommendations */
+.recommend-yes {
+  color: blue;
+  font-weight: bold;
+
+}
+
+.recommend-no {
+  color: red;
+  font-weight: bold;
+
+}
 
   
