--- a/src/app/shift-dialog/shift-dialog.component.html
+++ b/src/app/shift-dialog/shift-dialog.component.html
@@ -1,17 +1,26 @@
-<h1 mat-dialog-title>Add Shift for {{ data.date | date }}</h1>
-<div mat-dialog-content>
-  <form [formGroup]="shiftForm">
-    <mat-form-field>
-      <mat-label>Employee Name</mat-label>
-      <input matInput formControlName="employeeName" />
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Shift Time</mat-label>
-      <input matInput formControlName="shiftTime" />
-    </mat-form-field>
-  </form>
+<h1 mat-dialog-title>Add Shift for</h1>
+
+<div [formGroup]="shiftForm" mat-dialog-content>
+  <!-- Employee Selection -->
+  <mat-form-field appearance="fill">
+    <mat-label>Select Employee</mat-label>
+    <mat-select formControlName="employeeId">  <!-- Save EmployeeID -->
+      <mat-option *ngFor="let employee of employees" [value]="employee.EmployeeID">
+        {{employee.FirstName}} {{employee.LastName}}  <!-- Display FirstName and LastName -->
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="shiftForm.get('employeeId')?.invalid">Employee is required</mat-error>
+  </mat-form-field>
+
+  <!-- Comment Input -->
+  <mat-form-field appearance="fill">
+    <mat-label>Comment</mat-label>
+    <input matInput formControlName="comment">
+    <mat-error *ngIf="shiftForm.get('comment')?.invalid">Comment is required</mat-error>
+  </mat-form-field>
 </div>
+
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="onSave()">Save</button>
+  <button mat-button [disabled]="shiftForm.invalid" (click)="onSave()">Save</button>
 </div>
