--- a/src/app/shift-calendar/shift-calendar.component.html
+++ b/src/app/shift-calendar/shift-calendar.component.html
@@ -1,61 +1,74 @@
 <div class="container">
+    <!-- Employee Shift Count Card -->
+    <mat-card class="employee-shift-count-card">
+        <mat-card-title>Employee Shift Counts</mat-card-title>
+        <mat-card-content>
+          <table>
+            <thead>
+              <tr>
+                <th>Employee Name</th>
+                <th>Total Shifts</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let employee of employeeShiftCounts">
+                <td>{{ employee.employeeName }}</td>
+                <td>{{ employee.shiftCount }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </mat-card-content>
+      </mat-card>
+      
+      
+  
     <!-- Calendar Card -->
     <mat-card class="calendar-card">
       <mat-card-title>Shift Calendar</mat-card-title>
-  
       <mat-calendar [(selected)]="selectedDate" (selectedChange)="onDateSelected($event)">
       </mat-calendar>
     </mat-card>
   
     <!-- Shift List Table -->
     <mat-card class="shift-list-card">
-      <mat-card-title>Shifts</mat-card-title>
-  
-      <mat-card-content>
+        <mat-card-title>Shifts for {{ formattedMonth }} {{ selectedYear }}</mat-card-title>
+        <mat-card-content>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-          <!-- Year Column -->
           <ng-container matColumnDef="year">
             <th mat-header-cell *matHeaderCellDef> Year </th>
             <td mat-cell *matCellDef="let shift"> {{shift.Year}} </td>
           </ng-container>
   
-          <!-- Month Column -->
           <ng-container matColumnDef="month">
             <th mat-header-cell *matHeaderCellDef> Month </th>
             <td mat-cell *matCellDef="let shift"> {{shift.Month}} </td>
           </ng-container>
   
-          <!-- Day Column -->
           <ng-container matColumnDef="day">
             <th mat-header-cell *matHeaderCellDef> Day </th>
             <td mat-cell *matCellDef="let shift"> {{shift.Day}} </td>
           </ng-container>
   
-          <!-- Day of the Week Column -->
           <ng-container matColumnDef="dayOfTheWeek">
             <th mat-header-cell *matHeaderCellDef> Day of the Week </th>
             <td mat-cell *matCellDef="let shift"> {{shift.DayOfTheWeek}} </td>
           </ng-container>
   
-          <!-- EmployeeId Column -->
           <ng-container matColumnDef="employeeId">
             <th mat-header-cell *matHeaderCellDef> Employee ID </th>
             <td mat-cell *matCellDef="let shift"> {{shift.EmployeeId}} </td>
           </ng-container>
   
-          <!-- Employee Name Column -->
           <ng-container matColumnDef="employeeName">
             <th mat-header-cell *matHeaderCellDef> Employee Name </th>
             <td mat-cell *matCellDef="let shift"> {{shift.EmployeeName}} </td>
           </ng-container>
   
-          <!-- Comment Column -->
           <ng-container matColumnDef="comment">
             <th mat-header-cell *matHeaderCellDef> Comment </th>
             <td mat-cell *matCellDef="let shift"> {{shift.Comment}} </td>
           </ng-container>
   
-          <!-- Table Header and Row Definitions -->
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
